examples/negative/effects_phase2/pid_escape_from_spawn.kai
# Negative fixture (#520 / effects phase 2): per
# `docs/structured-concurrency.md`, a `Pid` (or `Fiber`) cannot
# escape the structured-concurrency scope of the function that
# spawned it. `launch` returns a freshly-spawned handle, which
# the typer must reject — the handle's lifetime is bound to
# the spawning fn's nursery.

fn worker() : Int = 1

pub fn launch() : Pid[Int] = Spawn.spawn(worker)

fn main() : Unit / Spawn = {
  let _ = launch()
  ()
}
